<resources>
    <string name="app_name">NMedia</string>
    <string name="hello">Hello World!</string>
    <string name="description_post_author_avatar">Post author avatar</string>
    <string name="description_post_menu">Post menu</string>
    <string name="description_post_like">Like</string>
    <string name="description_post_share">Share</string>
    <string name="description_post_save">Save</string>
    <string name="menu_remove">Remove</string>
    <string name="post_text">Post Text</string>
    <string name="menu_edit">Edit</string>
    <string name="error_empty_content">Content can\'t be empty</string>
    <string name="chooser_share_post">Share post</string>
    <string name="add_post">Add post</string>
    <string name="retry_loading">Retry</string>
    <string name="empty_posts">There are no posts.\nIf you create a new post, it will appear here</string>
    <string name="error_loading">Error loading data</string>
    <string name="save">Save</string>
    <string name="google_play_unavailable">Google Api Unavailable</string>
    <string name="notification_user_liked">User %1$s liked %2$s\'s post</string>
    <string name="channel_remote_name">Server notifications</string>
    <string name="channel_remote_description">Notifications from remote server</string>
    <string name="new_posts" translatable="false">New posts \n (%d)</string>
    <string name="error_get_newer_posts" translatable="false">Error get newer posts count</string>
    <string name="menu_save" translatable="false">Save</string>
    <string name="feed_title" translatable="false">Feed</string>
    <string name="new_post_title" translatable="false">New Post</string>
    <string name="photo" translatable="false">photo</string>
    <string name="type_post" translatable="false">type post</string>
    <string name="clear" translatable="false">Clear</string>
    <string name="select_photo" translatable="false">Select photo</string>
    <string name="take_photo" translatable="false">Take photo</string>
    <string name="login" translatable="false">Login</string>
    <string name="logout" translatable="false">Logout</string>
    <string name="register" translatable="false">Register</string>
    <string name="enter_login" translatable="false">enter login</string>
    <string name="password" translatable="false">Password</string>
    <string name="enter_password" translatable="false">enter password</string>
    <string name="confirmation_password" translatable="false">Confirmation\npassword</string>
    <string name="enter_confirmation_password" translatable="false">confirm password</string>
    <string name="registration" translatable="false">Registration</string>
    <string name="name" translatable="false">Name</string>
    <string name="enter_your_name" translatable="false">enter your name</string>
    <string name="add_avatar" translatable="false">Add avatar</string>
    <string name="notification_for_recipient_login_user" translatable="false">Notification for user %d</string>
    <string name="notification_for_all" translatable="false">Notification for all</string>
    <string name="retry" translatable="false">Retry</string>
</resources>