<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.AuthFragment">
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/common_spacing"
                android:text="@string/name"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@id/tv_login"
                app:layout_constraintEnd_toEndOf="@id/tv_login" />

            <EditText
                android:id="@+id/name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/common_spacing"
                android:autofillHints=""
                android:hint="@string/enter_your_name"
                android:inputType="text"
                app:layout_constraintBottom_toBottomOf="@id/tv_name"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/tv_name"
                app:layout_constraintTop_toTopOf="@id/tv_name" />

            <TextView
                android:id="@+id/tv_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/common_spacing"
                android:text="@string/login"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@id/tv_password"
                app:layout_constraintEnd_toEndOf="@id/tv_password" />

            <EditText
                android:id="@+id/login"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/common_spacing"
                android:autofillHints=""
                android:hint="@string/enter_login"
                android:inputType="text"
                app:layout_constraintBottom_toBottomOf="@id/tv_login"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/tv_password"
                app:layout_constraintTop_toTopOf="@id/tv_login" />

            <TextView
                android:id="@+id/tv_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/common_spacing"
                android:padding="@dimen/common_spacing"
                android:text="@string/password"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@id/tv_password_confirmation"
                app:layout_constraintEnd_toEndOf="@+id/tv_password_confirmation" />

            <EditText
                android:id="@+id/password"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/common_spacing"
                android:autofillHints=""
                android:hint="@string/enter_password"
                android:inputType="textPassword"
                app:layout_constraintBottom_toBottomOf="@id/tv_password"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/tv_password_confirmation"
                app:layout_constraintTop_toTopOf="@id/tv_password" />

            <TextView
                android:id="@+id/tv_password_confirmation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/common_spacing"
                android:text="@string/confirmation_password"
                android:textAlignment="textEnd"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <EditText
                android:id="@+id/password_confirmation"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/common_spacing"
                android:autofillHints=""
                android:hint="@string/enter_confirmation_password"
                android:inputType="textPassword"
                app:layout_constraintBottom_toBottomOf="@id/tv_password_confirmation"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/tv_password_confirmation"
                app:layout_constraintTop_toTopOf="@id/tv_password_confirmation" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <Button
            android:layout_width="wrap_content"
            android:id="@+id/add_photo"
            android:layout_gravity="center"
            android:text="@string/add_avatar"
            android:layout_height="wrap_content"/>
        <FrameLayout
            android:visibility="gone"
            android:id="@+id/preview_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/edit">

            <ImageView
                android:id="@+id/preview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:adjustViewBounds="true"
                android:contentDescription="@string/photo"
                tools:src="@tools:sample/avatars" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/clearPhoto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|bottom"
                android:text="@string/clear" />

        </FrameLayout>

        <Button
            android:id="@+id/registration_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/common_spacing"
            android:padding="@dimen/common_spacing"
            android:text="@string/registration" />

    </LinearLayout>
</ScrollView>